# python-sdk-contrib

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .release-please-manifest.json  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  mypy.ini  pyproject.toml  release-please-config.json  renovate.json  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  ruff.toml
hooks/openfeature-hooks-opentelemetry/: CHANGELOG.md  README.md  pyproject.toml
hooks/openfeature-hooks-opentelemetry/src/openfeature/contrib/hook/opentelemetry/: __init__.py  constants.py  metric.py  trace.py
hooks/openfeature-hooks-opentelemetry/tests/: test_metric.py  test_otel.py  test_trace.py
providers/openfeature-provider-env-var/: CHANGELOG.md  README.md  pyproject.toml
providers/openfeature-provider-env-var/src/openfeature/contrib/provider/envvar/: __init__.py  provider.py
providers/openfeature-provider-env-var/tests/: test_provider.py
providers/openfeature-provider-flagd/: CHANGELOG.md  README.md  buf.gen.python.yaml  pyproject.toml  pytest.ini  test_log.txt
providers/openfeature-provider-flagd/flags/: allFlags.json
providers/openfeature-provider-flagd/openfeature/contrib/provider/flagd/: provider.py
providers/openfeature-provider-flagd/scripts/: gen_protos.sh
providers/openfeature-provider-flagd/src/openfeature/: .gitignore
providers/openfeature-provider-flagd/src/openfeature/contrib/provider/flagd/: __init__.py  config.py  defaults.py  provider.py  sync_metadata_hook.py
providers/openfeature-provider-flagd/src/openfeature/contrib/provider/flagd/resolvers/: __init__.py  grpc.py  in_process.py  protocol.py  types.py  wasm_in_process.py
providers/openfeature-provider-flagd/tests/: conftest.py  test_config.py  test_errors.py  test_file_store.py  test_flagd.py  test_grpc_resolver.py  test_grpc_sync_connector.py  test_grpc_watcher.py  test_in_process.py  test_metadata.py  test_targeting.py
providers/openfeature-provider-flagd/tests/e2e/: config.feature  conftest.py  events.feature  flagd_container.py  parsers.py  paths.py  rpc_cache.feature  steps.py  test_config.py  test_in-process-file.py  test_in_process_file.py  test_inprocess.py  test_inprocess_custom_ops.py  test_inprocess_edge_cases.py  test_inprocess_evaluator_reuse.py  test_inprocess_events.py  test_inprocess_file.py  test_inprocess_reconnect.py  test_inprocess_testing_flags.py  test_inprocess_zero_evals.py  test_rpc.py  test_rpc_reconnect.py  test_rpc_ssl.py  testfilter.py
providers/openfeature-provider-flagd/tests/e2e/file/: conftest.py  test_flaqd.py
providers/openfeature-provider-flagd/tests/e2e/in-process-file/: conftest.py
providers/openfeature-provider-flagd/tests/e2e/in_process/: conftest.py  test_flaqd.py
providers/openfeature-provider-flagd/tests/e2e/in_process_file/: conftest.py  test_flaqd.py
providers/openfeature-provider-flagd/tests/e2e/inprocess/: conftest.py  test_flaqd.py
providers/openfeature-provider-flagd/tests/e2e/inprocess/file/: conftest.py  test_inprocess_custom_ops.py  test_inprocess_edge_cases.py  test_inprocess_evaluator_reuse.py  test_inprocess_events.py  test_inprocess_testing_flags.py  test_inprocess_zero_evals.py
providers/openfeature-provider-flagd/tests/e2e/inprocess/flags/: allFlags.json
providers/openfeature-provider-flagd/tests/e2e/inprocess/grpc/: conftest.py  test_inprocess_grpc.py  test_inprocess_grpc_evals.py  test_inprocess_grpc_events.py  test_inprocess_grpc_reconnect.py  test_inprocess_grpc_zero_evals.py
providers/openfeature-provider-flagd/tests/e2e/rpc/: conftest.py  test_flaqd.py
providers/openfeature-provider-flagd/tests/e2e/step/: _offline.py  _utils.py  config_steps.py  context_steps.py  event_steps.py  flag_step.py  provider_steps.py
providers/openfeature-provider-flagd/tests/e2eGherkin/: conftest.py  flagd_container.py  steps.py  test_rpc.py
providers/openfeature-provider-flagd/tests/flags/: .gitignore  basic-flag-broken-default.json  basic-flag-broken-state.json  basic-flag-broken-targeting.json  basic-flag-broken-variants.json  basic-flag-combined-metadata.json  basic-flag-disabled.json  basic-flag-invalid.not-json  basic-flag-metadata.json  basic-flag-no-state.json  basic-flag-set-metadata.json  basic-flag-without-default.json  basic-flag-wrong-structure.json  basic-flag-wrong-variant.json  basic-flag.json  basic-flag.yaml  invalid-flag-metadata-list.json  invalid-flag-metadata.json  invalid-flag-set-metadata-list.json  invalid-flag-set-metadata.json  invalid-fractional-args-wrong-content.json  invalid-fractional-args.json  invalid-fractional-weights-strings.json  invalid-fractional-weights.json  invalid-semver-args.json  invalid-semver-op.json  invalid-stringcomp-args.json
providers/openfeature-provider-flipt-client/: README.md  pyproject.toml
providers/openfeature-provider-flipt-client/src/openfeature/contrib/provider/flipt-client/: __init__.py
providers/openfeature-provider-ofrep/: CHANGELOG.md  README.md  pyproject.toml
providers/openfeature-provider-ofrep/src/openfeature/contrib/provider/ofrep/: __init__.py
providers/openfeature-provider-ofrep/tests/: conftest.py  test_provider.py
providers/openfeature-provider-unleash/: CHANGELOG.md  README.md  pyproject.toml
providers/openfeature-provider-unleash/src/openfeature/contrib/provider/unleash/: __init__.py  events.py  flag_evaluation.py  tracking.py
providers/openfeature-provider-unleash/src/scripts/: scripts.py
providers/openfeature-provider-unleash/tests/: conftest.py  test_events.py  test_flag_evaluation.py  test_integration.py  test_provider.py  test_tracking.py
tools/openfeature-flagd-api-testkit/: .gitignore  CHANGELOG.md  README.md  hatch_build.py  hatch_build_sync.py  pyproject.toml
tools/openfeature-flagd-api-testkit/tests/: test_smoke.py
tools/openfeature-flagd-core/: CHANGELOG.md  README.md  pyproject.toml
tools/openfeature-flagd-core/src/openfeature/contrib/tools/flagd/core/: __init__.py  (+1 more)
tools/openfeature-flagd-core/tests/: test_flagd_core.py  test_targeting.py
tools/openfeature-flagd-core/tests/e2e/: conftest.py  test_evaluator.py
(+101 files in other folders)
