# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openfeature-hooks-opentelemetry"
version = "0.2.0"
description = "OpenTelemetry hooks for the OpenFeature Python SDK"
readme = "README.md"
authors = [{ name = "OpenFeature", email = "openfeature-core@groups.io" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
    "openfeature-sdk>=0.6.0",
    "opentelemetry-api",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/open-feature/python-sdk-contrib"

[tool.hatch]

[tool.hatch.envs.hatch-test]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
pre-install-commands = [
  "hatch build",
]

[tool.hatch.envs.hatch-test.scripts]
run = "pytest {args:tests}"
run-cov = "coverage run -m pytest {args:tests}"
cov-combine = "coverage combine"
cov-report = [
  "coverage xml",
  "coverage html",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[tool.hatch.envs.mypy]
dependencies = [
  "mypy[faster-cache]>=1.13.0",
]

[tool.hatch.envs.mypy.scripts]
run = "mypy"

[tool.hatch.build.targets.sdist]
exclude = [
  ".gitignore",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openfeature"]

[tool.mypy]
mypy_path = "src"
files = "src"

python_version = "3.9" # should be identical to the minimum supported version
namespace_packages = true
explicit_package_bases = true
local_partial_types = true
pretty = true

strict = true
disallow_any_generics = false
