[project]
name = "openfeature-provider-env-var"
version = "0.1.0"
description = "OpenFeature Python Environment Variable Provider"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openfeature-sdk>=0.6.0",
]
authors = [{ name = "OpenFeature", email = "openfeature-core@groups.io" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openfeature"]

[tool.hatch]

pre-install-commands = [
    "hatch build",
]

[tool.hatch.envs.mypy.scripts]
run = "mypy"

[tool.hatch.envs.mypy]
dependencies = ["mypy"]

[tool.mypy]
mypy_path = "src"
files = "src"

[tool.hatch.envs.hatch-test]
dependencies = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest",
]

[tool.coverage.run]
omit = [
    "tests/**",
]

[tool.hatch.envs.hatch-test.scripts]
run = "uv run pytest"
run-cov = "uv run pytest --cov --cov-report xml --cov-report html --junit-xml=tests-results.xml"
cov-combine = "."
cov-report = [
    "coverage xml",
    "coverage html",
    "coverage report",
]
cov = [
    ".coverage",
    "tests-results.xml",
]