[build-system]
# `uv_build` backend doesn't support build hooks yet https://github.com/astral-sh/uv/issues/14561
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openfeature-provider-flagd"
version = "0.2.6"
description = "OpenFeature provider for the flagd flag evaluation engine"
readme = "README.md"
authors = [{ name = "OpenFeature", email = "openfeature-core@groups.io" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
  "openfeature-sdk>=0.8.2",
  "grpcio>=1.68.1",
  "protobuf>=5.29.5",
  "mmh3>=4.1.0",
  "panzi-json-logic>=1.0.1",
  "semver>=3,<4",
  "pyyaml>=6.0.1",
  "cachebox; python_version >= '3.10'",
  # version `5.0.1` wheels for Python 3.9 on macOS were the last one for now,
  # but it looks like the next version `>5.0.4` will have one again.
  # for simplicity, restircting it for all platforms for now.
  "cachebox<=5.0.1; python_version < '3.10'",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/open-feature/python-sdk-contrib"

[dependency-groups]
dev = [
  "asserts>=0.13.0,<0.14.0",
  "coverage[toml]>=7.10.0,<8.0.0",
  "grpcio-health-checking>=1.74.0,<2.0.0",
  "mypy>=1.18.0,<2.0.0",
  "pytest>=8.4.0,<9.0.0",
  "pytest-bdd>=8.1.0,<9.0.0",
  "testcontainers>=4.12.0,<5.0.0",
  "types-grpcio>=1.0.0,<2.0.0",
  "types-protobuf>=6.30.0,<7.0.0",
  "types-pyyaml>=6.0.0,<7.0.0",
]

[tool.hatch.build.hooks.protobuf]
generate_pyi = false
dependencies = [
    "protobuf==5.29.5",
    "hatch-protobuf",
    "mypy-protobuf~=3.0",
]
proto_paths = [
  ".",
]
output_path = "src/"

[[tool.hatch.build.hooks.protobuf.generators]]
name = "mypy"
outputs = ["{proto_path}/{proto_name}_pb2.pyi"]

[[tool.hatch.build.hooks.protobuf.generators]]
name = "mypy_grpc"
outputs = ["{proto_path}/{proto_name}_pb2_grpc.pyi"]

[tool.hatch.build.targets.sdist]
exclude = [
  ".gitignore",
  "/openfeature",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openfeature"]

[tool.coverage.run]
omit = [
  # exclude generated files
  "src/openfeature/schemas/*",
  "tests/**",
]

[tool.mypy]
mypy_path = "src"
files = "src"

python_version = "3.9" # should be identical to the minimum supported version
namespace_packages = true
explicit_package_bases = true
local_partial_types = true # will become the new default from version 2
allow_redefinition_new = true # will become the new default from version 2
fixed_format_cache = true # new caching mechanism
pretty = true

strict = true
disallow_any_generics = false

[[tool.mypy.overrides]]
module = [
    "json_logic.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "openfeature.schemas.*"
]
warn_unused_ignores = false

[project.scripts]
# workaround while UV doesn't support scripts directly in the pyproject.toml
# see: https://github.com/astral-sh/uv/issues/5903
cov-report = "scripts.scripts:cov_report"
cov = "scripts.scripts:cov"
# don't name it `mypy` otherwise `uv` will override the actual binary
mypy-check = "scripts.scripts:mypy"
test = "scripts.scripts:test"
test-cov = "scripts.scripts:test_cov"
