# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openfeature-provider-ofrep"
version = "0.1.0"
description = "OpenFeature provider for the OpenFeature Remote Evaluation Protocol (OFREP)"
readme = "README.md"
authors = [{ name = "OpenFeature", email = "openfeature-core@groups.io" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
  "openfeature-sdk>=0.7.0",
  "requests"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/open-feature/python-sdk-contrib"

[tool.hatch]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "requests-mock",
  "types-requests",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "coverage xml",
  "coverage html",
]
cov = [
  "test-cov",
  "cov-report",
]

[tool.hatch.build.targets.sdist]
exclude = [
  ".gitignore",
  "schemas",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openfeature"]

[tool.coverage.run]
omit = [
  "tests/**",
]
