[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openfeature-flagd-api-testkit"
version = "0.1.0"
description = "OpenFeature flagd evaluator API compliance test suite"
readme = "README.md"
authors = [{ name = "OpenFeature", email = "openfeature-core@groups.io" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
    "openfeature-flagd-api",
    "openfeature-sdk>=0.8.2",
    "pytest>=8.4.0",
    "pytest-bdd>=8.1.0",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/open-feature/python-sdk-contrib"

[dependency-groups]
dev = [
  "coverage[toml]>=7.10.0,<8.0.0",
  "mypy>=1.18.0,<2.0.0",
  "poethepoet>=0.37.0",
]

[tool.uv.sources]
openfeature-flagd-api = { workspace = true }
openfeature-flagd-core = { workspace = true }

[tool.hatch.build.targets.sdist]
# Include generated feature/flag files even though they are gitignored
force-include = {}

[tool.hatch.build.targets.wheel]
packages = ["src/openfeature"]
# Include generated feature/flag files even though they are gitignored
artifacts = [
    "src/openfeature/contrib/tools/flagd/testkit/features/",
    "src/openfeature/contrib/tools/flagd/testkit/flag_data/",
]

[tool.hatch.build.hooks.custom]

[tool.mypy]
mypy_path = "src"
files = "src"
python_version = "3.10"
namespace_packages = true
explicit_package_bases = true
local_partial_types = true
allow_redefinition_new = true
fixed_format_cache = true
pretty = true
strict = true
disallow_any_generics = false

[tool.coverage.run]
omit = ["tests/**"]

[tool.poe.tasks]
test = "pytest tests"
test-cov = "coverage run -m pytest tests"
cov-report = "coverage xml"
cov = [
    "test-cov",
    "cov-report"
]
mypy = "mypy"
